--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,8 @@ nav:
     href:           "about"
   - name:           "Test"
     href:           "test"
+  - name:           "Test"
+    href:           "testpage"
 
 
 # Sass
