--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ nav:
     href:           "photos"
   - name:           "Speaking"
     href:           "speaking"
-  - name:           "About Me"
+  - name:           "About Me1"
     href:           "about"
   - name:           "Test"
     href:           "test"
