--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ nav:
     href:           "readings"
   - name:           "Photos"
     href:           "photos"
+  - name:           "Press"
+    href:           "press"
   - name:           "About Me"
     href:           "about"
 
