--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic
 name:               "Qasar Younis"
-description:        "Qasar Younis"
+description:        "Qasar Younis1"
 
 # jekyll-seo-tag, see: http://www.rubydoc.info/gems/jekyll-seo-tag/1.2.0
 url:                "//qasaryounis.com"
