--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,10 @@ nav:
     href:           "books"
   - name:           "Photos"
     href:           "photos"
-  - name:            "Music"
-    href:            "music"
+  - name:           "Music"
+    href:           "music"
+  - name:           "Links"
+    href:           "links"
   - name:           "Press"
     href:           "press"
   - name:           "About Me"
