--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ nav:
   - name:           "Books"
     href:           "books"
   - name:           "Photos"
-    href:           "photos"
+    href:           "my photos"
   - name:           "Music"
     href:           "music"
   - name:           "Links"
