--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ nav:
     href:           "links"
   - name:           "Press"
     href:           "press"
-  - name:           "About Me"
+  - name:           "About"
     href:           "about"
 
 
