Add Twitter Card preview images for essays

--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,7 @@ defaults:
       type:         "essay"
     values:
       layout:       "post"
+      image:        "/assets/essay-previews/default.png"
 
 gems:
 - jekyll-seo-tag
