Update main image to tom5t.png with hover tooltip and enhance navigation hover styling
- Changed main hero image from work.jpg to tom5t.png
- Added hover tooltip showing 'Design by tom5t' (with italicized tom5t) centered below image
- Fixed missing name field in _config.yml (name now appears in navigation)
- Enhanced navigation hover: added bold font-weight on hover for better visibility
- Fixed overflow issues to prevent tooltip clipping
- Updated Jekyll config: moved jekyll-seo-tag to plugins section

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 # Basic
+title:              "Qasar Younis"
 name:               "Qasar Younis"
 description:        "My name is Qasar Younis - this is my homepage. I'm a founder, engineer, and angel investor."
 
@@ -68,11 +69,8 @@ defaults:
       layout:       "post"
       image:        "/assets/essay-previews/default.png"
 
-gems:
-- jekyll-seo-tag
-- jekyll-sitemap
-
 plugins:
+- jekyll-seo-tag
 - jekyll-sitemap
 
 future: true
