Add aggressive caching and performance optimizations
- Add service worker (sw.js) for instant repeat visits
- Implement cache-first strategy for static assets
- Add HTTP cache headers for CDN configuration
- Optimize homepage with photo prefetching
- Add lazy loading for book images
- Optimize photos page preloading
- Add navigation link prefetching on hover
- Add localStorage caching for navigation state
- Update cache durations: HTML (24h), Writings (6h), Images/CSS/JS (1yr)
- Add comprehensive documentation for caching strategies

--- a/_config.yml
+++ b/_config.yml
@@ -73,5 +73,10 @@ plugins:
 - jekyll-seo-tag
 - jekyll-sitemap
 
+# Include service worker file in build
+include:
+  - sw.js
+  - _headers
+
 future: true
 
