Fix: Remove _headers from include list to fix GitHub Pages build

--- a/_config.yml
+++ b/_config.yml
@@ -73,10 +73,9 @@ plugins:
 - jekyll-seo-tag
 - jekyll-sitemap
 
-# Include service worker file in build
+# Include service worker file in build (GitHub Pages copies root files automatically)
 include:
   - sw.js
-  - _headers
 
 future: true
 
